--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,6 @@
     <module>ear</module>
     <module>web</module>
     <module>ejb</module>
+    <module>web-spa</module>
   </modules>
 </project>
