--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -46,12 +46,21 @@
             <artifactId>ejb</artifactId>
             <version>1.0</version>
             <type>ejb</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.tsi2</groupId>
             <artifactId>web</artifactId>
             <version>1.0</version>
             <type>war</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.tsi2</groupId>
+            <artifactId>web-spa</artifactId>
+            <version>1.0</version>
+            <type>war</type>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
