--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -61,5 +61,12 @@
             <type>war</type>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.tsi2</groupId>
+            <artifactId>web-jsf</artifactId>
+            <version>1.0</version>
+            <type>war</type>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
