--- a/web-spa/pom.xml
+++ b/web-spa/pom.xml
@@ -43,6 +43,16 @@
             <artifactId>thymeleaf</artifactId>
             <version>3.0.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>eu.bitwalker</groupId>
+            <artifactId>UserAgentUtils</artifactId>
+            <version>1.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
