--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>mongodb-driver</artifactId>
             <version>3.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb.morphia</groupId>
+            <artifactId>morphia</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
